# pbrlib

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
PBRLibTests/: CMakeLists.txt  pbrlib_tests_run.cpp  utils.hpp
PBRLibTests/MathTests/: Matrix2x2Tests.cpp  Matrix3x3Tests.cpp  Matrix4x4Tests.cpp  QuaternionTests.cpp  Vec2Tests.cpp  Vec3Tests.cpp  Vec4Tests.cpp
PBRLibTests/MemoryTests/: MemoryArenaTests.cpp  MemoryBlockTests.cpp  STLAlignedAllocatorTests.cpp  STLArenaLinearAllocatorTests.cpp
PBRLibTests/MovingTest/: TransformTests.cpp
PBRLibTests/MovingTests/: TransformTests.cpp
PBRLibTests/RenderingResourcesTests/: AABBTests.cpp  MeshTests.cpp
PBRLibTests/RenderingTests/Camera/: PerspectiveCameraTests.cpp
PBRLibTests/RenderingTests/CameraTest/: PerspectiveCameraTests.cpp
PBRLibTests/RenderingTests/CamerasTests/: PerspectiveCameraTests.cpp
PBRLibTests/RenderingTests/GeometryTest/: AABBTests.cpp  MeshTests.cpp
PBRLibTests/RenderingTests/GeometryTests/: AABBTests.cpp  MeshTests.cpp
PBRLibTests/RenderingTests/LightsTest/: DirectionLightTests.cpp  PointLightTests.cpp  SpotLightTests.cpp
PBRLibTests/RenderingTests/LightsTests/: DirectionLightTests.cpp  PointLightTests.cpp  SpotLightTests.cpp
PBRLibTests/SceneGraphTests/: CameraNodeTests.cpp  DirectionLightNodeTests.cpp  MeshNodeTests.cpp  PointLightNodeTests.cpp  SceneNodeTests.cpp  SceneTests.cpp  SpotLightNodeTests.cpp
backend/: CMakeLists.txt  components.hpp  events.hpp  exceptions.cpp  exceptions.hpp  initialize.cpp  initialize.hpp  profiling.cpp  profiling.hpp
backend/input/: sdl_keycode_map.hpp
backend/logger/: console.cpp  console.hpp  logger.hpp
backend/math/: float16.hpp  float16.inl  matrix2x2.hpp  matrix2x2.inl  matrix3x3.hpp  matrix3x3.inl  matrix4x4.hpp  matrix4x4.inl  quat.hpp  quat.inl  vec2.hpp  vec2.inl  vec3.hpp  vec3.inl  vec4.hpp  vec4.inl
backend/renderer/: CMakeLists.txt  canvas.cpp  canvas.hpp
backend/renderer/frame_graph/: CMakeLists.txt  compound_render_pass.cpp  compound_render_pass.hpp  frame_graph.cpp  frame_graph.hpp  gbuffer_generator.cpp  gbuffer_generator.hpp  physically_based_lighting.cpp  physically_based_lighting.hpp  render_pass.cpp  render_pass.hpp  ssao.cpp  ssao.hpp
backend/renderer/vulkan/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer.inl  check.hpp  command_buffer.cpp  command_buffer.hpp  compute_pipeline.cpp  compute_pipeline.hpp  config.hpp  descriptor_binder.cpp  descriptor_binder.hpp  descriptor_group.cpp  descriptor_group.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  gpu_marker_colors.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  image.cpp  image.hpp  pipeline_layout.cpp  pipeline_layout.hpp  pixel_format.cpp  pixel_format.hpp  render_pass.cpp  render_pass.hpp  shader_compiler.cpp  shader_compiler.hpp  surface.cpp  surface.hpp  sync.cpp  sync.hpp  unique_handler.cpp  unique_handler.hpp  unique_handler.inl  utils.hpp  vma_usage.cpp
backend/scene/: CMakeLists.txt  assimp_importer.cpp  assimp_importer.hpp  material_manager.cpp  material_manager.hpp  mesh_manager.cpp  mesh_manager.hpp
backend/shaders/: CMakeLists.txt  bilateral_blur.glsl.comp  filter.glsl  fxaa.comp.glsl  fxaa.glsl.comp  generation.glsl  gpu_cpu_constants.h  math.glsl  noise.glsl  physically_based_lighting.comp.glsl
backend/shaders/bilateral_blur/: bilateral_blur.glsl.comp  exports.glsl
backend/shaders/fxaa/: fxaa.glsl.comp
backend/shaders/gbuffer_generator/: exports.glsl  gbuffer_generator.frag  gbuffer_generator.frag.glsl  gbuffer_generator.glsl.frag  gbuffer_generator.glsl.vert  gbuffer_generator.vert  gbuffer_generator.vert.glsl  mesh.glsl  packing.glsl
backend/shaders/material_manager/: exports.glsl
backend/shaders/mesh_manager/: exports.glsl
backend/shaders/ssao/: exports.glsl  ssao.glsl.comp
backend/src/memory/: memory_utils.cpp
backend/src/renderer/: frame_graph.cpp
backend/src/scene/: assimp_importer.cpp
backend/src/utils/: memory.cpp
backend/utils/: CMakeLists.txt  align_size.hpp  enum_cast.hpp  generate_color.hpp  generate_color.inl  memory.cpp  memory.hpp  paths.hpp  scope_exit.hpp  versions.hpp  vulkan.hpp
backend/utils/private/: info.hpp.in
include/pbrlib/: CMakeLists.txt  PBRLibResources.hpp  PBRLibResources.inl  camera.hpp  components.hpp  config.hpp  core.hpp  core.hpp.in  engine.hpp  event_system.hpp  event_system.inl  exceptions.hpp  transform.hpp  transforms.hpp  window.hpp
include/pbrlib/Input/: InputStay.hpp  KeyCode.hpp
include/pbrlib/Logger/: Logger.hpp
include/pbrlib/Memory/: IMemoryBlock.hpp  MemoryArena.hpp  MemoryBlock.hpp  MemoryBlock.inl  STLAlignedAllocator.hpp  STLArenaLinearAllocator.hpp  STLArenaLinearAllocator.inl
include/pbrlib/Moving/: Transform.hpp
include/pbrlib/Rendering/: Window.hpp
pbrlib-tests/: CMakeLists.txt  config.hpp  engine_tests.cpp  event_system_tests.cpp  pbrlib_tests_run.cpp  transform_tests.cpp  utils.hpp
pbrlib-tests/image_comparison/: image_comparison.cpp  image_comparison.glsl.comp  image_comparison.hpp  image_diff_generator.glsl.comp
pbrlib-tests/math/: CMakeLists.txt  Matrix3x3Tests.cpp  Matrix4x4Tests.cpp  Vec2Tests.cpp  aabb_tests.cpp  mat2x2_tests.cpp  mat3x3_tests.cpp  mat4x4_tests.cpp  quat_tests.cpp  testing_types.hpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp
pbrlib-tests/memory/: MemoryArenaTests.cpp  MemoryBlockTests.cpp  STLAlignedAllocatorTests.cpp  STLArenaLinearAllocatorTests.cpp  memory_arena_tests.cpp  memory_block_tests.cpp  stl_aligned_allocator_tests.cpp  stl_arena_linear_allocator_tests.cpp
pbrlib-tests/moving/: TransformTests.cpp  transform_tests.cpp
pbrlib-tests/renderer/: CMakeLists.txt  camera_tests.cpp  canvas_tests.cpp  frame_graph_tests.cpp  framegraph_resources_getter.cpp  framegraph_resources_getter.hpp  fxaa_tests.cpp  gbuffer_generator_tests.cpp  render_test.cpp  render_test.hpp  ssao_tests.cpp  vulkan_device_tests.cpp
pbrlib-tests/scene/: MeshNodeTests.cpp  SceneNodeTests.cpp  content_tests.cpp  scene_item_tests.cpp  scene_tests.cpp
pbrlib-tests/utils/: graphviz_generator.cpp  graphviz_generator.hpp
(+537 files in other folders)
